--- a/clasificados/CSS/style.css
+++ b/clasificados/CSS/style.css
@@ -1,3 +1,22 @@
+*{
+  background-color:#13442e;
+}
+a{
+  text-decoration: none;
+}
+
+a:visited{
+  text-decoration: none;
+  color: 
+}
+
+a:hover{
+  text-decoration: underline;
+  color: #8bdaf4;
+}
 h3{
+  text-align: center;
+}
+div{
   text-align: center;
 }
